códigos fontes main, index e styles

--- a/index.html
+++ b/index.html
@@ -191,5 +191,13 @@
     });
     </script>
     <script src="scripts/main.js"></script>
+
+    <!-- ...restante do seu HTML... -->
+
+<!-- Overlay de amor -->
+<div id="amor-overlay" style="display:none;">
+    <div id="amor-msg">Eu te amo minha garota💗</div>
+    <div id="amor-coracoes"></div>
+</div>
 </body>
 </html>
